<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Filter_Current_Hexapod_Robot_Input" Id="{2bab2ed2-b8ef-4021-b123-2155f4454e12}">
    <Declaration><![CDATA[TYPE ST_Filter_Current_Hexapod_Robot_Input :
STRUCT
	Current_Motor: matrix_18_real_T;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>