<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Tough_Signal_Detection_Simple_Output" Id="{26811516-43c4-4912-954b-21e2ffad15b6}">
    <Declaration><![CDATA[TYPE ST_Tough_Signal_Detection_Simple_Output :
STRUCT
	Touch_Signal: matrix_6_boolean_T;
	Leg_Touch: matrix_3_real_T;
	Leg_Detection: matrix_3_real_T;
	Current_Change: matrix_18_real_T;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>